--- a/style.css
+++ b/style.css
@@ -1,60 +1,72 @@
-.game{
-    width: 600px;
-    height: 200px;
-    border: 1px solid black;
-    margin: auto;
+.game {
+  width: 600px;
+  height: 200px;
+  border: 1px solid black;
+  margin: auto;
 }
 
-#dino{
-    width: 50px;
-    height: 50px;
-    background-image: url(resources/dino.png);
+#dino {
+  width: 50px;
+  height: 50px;
+  background-image: url(resources/dino.png);
 
-    position: relative;
-    top: 150px;
+  position: relative;
+  top: 150px;
 }
 
-.jump {animation: jump 0.3s linear;}
+.jump {
+  animation: jump 0.3s linear;
+}
 
 @keyframes jump {
-    0% {
-        top: 150px;
-    }
+  0% {
+    top: 150px;
+  }
 
-    30% {
-        top: 130px;
-    }
+  15% {
+    top: 120px;
+  }
 
-    50% {
-        top: 80px;
-    }
+  30% {
+    top: 90px;
+  }
 
-    80% {
-        top: 130px;
-    }
+  50% {
+    top: 60px;
+  }
 
-    100% {
-        top: 150px;
-    }
+  70% {
+    top: 90px;
+  }
+
+  85% {
+    top: 120px;
+  }
+
+  100% {
+    top: 150px;
+  }
 }
 
 #obtic {
-    width: 20px;
-    height: 40px;
-    position: relative;
-    top: 110px;
-    left: 580px;
+  width: 20px;
+  height: 40px;
+  position: relative;
+  top: 110px;
+  left: 580px;
 
-    background-image: url(resources/obtic.png);
-
-    animation: block 1s infinite linear;
+  background-image: url(resources/obtic.png);
 }
 
-@keyframes block{
-    0% {
-        left: 580px;
-    }
-    100% {
-        left: -50px;
-    }
+.move {
+  animation: block 1s infinite linear;
+}
+
+@keyframes block {
+  0% {
+    left: 580px;
+  }
+  100% {
+    left: -50px;
+  }
 }
